# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = dimcat
description = DIgital Musicology Corpus Analysis Toolkit
author = Digital and Cognitive Musicology Lab @ École Polytechnique Fédérale de Lausanne
author_email = johannes.hentschel@epfl.ch
license = GPL-3.0-or-later
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/DCMLab/dimcat
# Add here related links, for example:
project_urls =
    Documentation = https://dcmlab.github.io/dimcat/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.10

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    frictionless[zenodo,pandas,visidata]==5.15.1
    pandas==1.5.3  # XXX - required by ms3
    importlib-metadata~=6.0.0
    marshmallow==3.19.0
    ms3==2.0.0
    music21==9.1.0
    plotly==5.13.0
    seaborn~=0.12.2
    setuptools~=65.6.3

[options.packages.find]
where = src
exclude =
    tests


[options.extras_require]
;modin =
;    modin[ray]==0.18.1
;    ray==2.3.0
testing =
;    dimcat[modin]
    pytest-cov~=4.0.0
    pytest~=7.1.2
    pyproject_api==1.5.1
docs = # includes dependencies used in the notebooks
    colorlover~=0.3.0
;    dimcat[modin]
    jupyter~=1.0.0
    kaleido~=0.2.1
    myst-nb~=0.17.1
    pitchtypes>=0.4.0
    plotly~=5.13.0
    sphinx~=5.3.0
    pydata_sphinx_theme==0.13.3
dev =
    dimcat[testing]
    dimcat[docs]
    pre-commit~=3.0.4




[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = dimcat.module:function
# For example:
console_scripts =
   dimcat = dimcat.cli:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    #--cov dimcat --cov-report term-missing
    --no-cov
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.4
package = dimcat
